--- a/simpledocs/catalog-info.yaml
+++ b/simpledocs/catalog-info.yaml
@@ -1,9 +1,17 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: chart-docs
+  name: artist-web
   description: The place to be, for great artists
   backstage.io/techdocs-ref: dir:.
 spec:
-  type: service
+  type: website
   lifecycle: production
+  owner: artist-relations-team
+  system: artist-engagement-portal
+  dependsOn:
+    - resource:default/artists-db
+  dependencyOf:
+    - component:default/artist-web-lookup
+  providesApis:
+    - artist-api
