--- a/simpledocs/catalog-info.yaml
+++ b/simpledocs/catalog-info.yaml
@@ -5,7 +5,7 @@ metadata:
   description: The place to be, for great artists
   annotations:
     backstage.io/techdocs-ref: dir:.
-    github.com/project-slug: pep8speaks-org/pep8speaks
+    github.com/project-slug: grafana/grafana
 spec:
   type: website
   lifecycle: production
