--- a/simpledocs/catalog-info.yaml
+++ b/simpledocs/catalog-info.yaml
@@ -7,7 +7,7 @@ metadata:
     backstage.io/techdocs-ref: dir:.
     github.com/project-slug: grafana/grafana
 spec:
-  type: Framework
+  type: website
   lifecycle: production
   owner: Prajwal
   system: Automation-Framework
